// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleBar/> .handleChange updates the value of the input 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)>
    <div
      className="wrapper"
    >
      <div
        className="search"
      >
        <pure(Search) />
      </div>
      <input
        className="input"
        onChange={[Function]}
        placeholder="Search for business"
        value="abc"
      />
    </div>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`<TitleBar/> .render renders correctly 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)>
    <div
      className="wrapper"
    >
      <div
        className="search"
      >
        <pure(Search) />
      </div>
      <input
        className="input"
        onChange={[Function]}
        placeholder="Search for business"
        value=""
      />
    </div>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
